[package]
edition = "2021"
name = "query-engine"
version = "0.1.0"

[features]
default = ["sql", "mongodb"]
mongodb = ["mongodb-connector", "psl/mongodb"]
sql = ["sql-connector", "sql-connector/native_all"]

vendored-openssl = ["sql-connector/vendored-openssl"]

mysql = ["sql-connector/mysql", "user-facing-errors/mysql", "psl/mysql"]
sqlite = ["sql-connector/sqlite", "user-facing-errors/sqlite", "psl/sqlite"]
mssql = ["sql-connector/mssql", "user-facing-errors/mssql", "psl/mssql"]
postgresql = ["sql-connector/postgresql", "user-facing-errors/postgresql", "psl/postgresql"]

[dependencies]
tokio.workspace = true
anyhow = "1.0"
async-trait.workspace = true
base64 = "0.13"
connection-string.workspace = true
connector = { path = "../connectors/query-connector", package = "query-connector" }
enumflags2.workspace = true
psl = { workspace = true }
graphql-parser = { git = "https://github.com/prisma/graphql-parser" }
mongodb-connector = { path = "../connectors/mongodb-query-connector", optional = true, package = "mongodb-query-connector" }
query-core = { path = "../core", features = ["metrics"] }
request-handlers = { path = "../request-handlers", features = ["all"] }
serde.workspace = true
serde_json.workspace = true
sql-connector = { path = "../connectors/sql-query-connector", optional = true, package = "sql-query-connector" }
structopt = "0.3"
thiserror = "1.0"
url.workspace = true
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime"] }
tracing.workspace = true
tracing-opentelemetry = "0.17.3"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10", features = ["tls", "tls-roots"] }
query-engine-metrics = { path = "../metrics" }

user-facing-errors = { path = "../../libs/user-facing-errors" }

[dev-dependencies]
serial_test = "*"
quaint.workspace = true
indoc.workspace = true
