[package]
edition = "2021"
name = "schema-core"
version = "0.1.0"
license = "Apache-2.0"

[features]
mongodb = ["dep:mongodb-schema-connector", "psl/mongodb"]
sql = ["dep:sql-schema-connector"]
mysql = ["sql", "sql-schema-connector/mysql", "psl/mysql"]
sqlite = ["sql", "sql-schema-connector/sqlite", "psl/sqlite"]
postgresql = ["sql", "sql-schema-connector/postgresql", "psl/postgresql"]
mssql = ["sql", "sql-schema-connector/mssql", "psl/mssql"]
cockroachdb = ["sql", "sql-schema-connector/postgresql", "psl/cockroachdb"]

vendored-openssl = ["sql-schema-connector/vendored-openssl"]

[dependencies]
psl = { workspace = true }
schema-connector = { path = "../connectors/schema-connector" }

mongodb-schema-connector = { path = "../connectors/mongodb-schema-connector", optional = true }
sql-schema-connector = { path = "../connectors/sql-schema-connector", optional = true }
user-facing-errors = { path = "../../libs/user-facing-errors", features = [] }

async-trait.workspace = true
chrono.workspace = true
enumflags2.workspace = true
jsonrpc-core = "17.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
tracing-futures = "0.2"
url.workspace = true

[build-dependencies]
json-rpc-api-build = { path = "../json-rpc-api-build" }
